Upgraded to Java 21 and Spring Boot 3. Refactored code.